--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -15,6 +15,6 @@
   </servlet-mapping>
   <context-param>
 		<param-name>primefaces.THEME</param-name>
-		<param-value>dot-luv</param-value>
+		<param-value>afterdark</param-value>
   </context-param>
 </web-app>
