--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -25,6 +25,6 @@
   </servlet-mapping>
   <context-param>
 		<param-name>primefaces.THEME</param-name>
-		<param-value>afterdark</param-value>
+		<param-value>home</param-value>
   </context-param>
 </web-app>
