--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -27,4 +27,8 @@
 		<param-name>primefaces.THEME</param-name>
 		<param-value>home</param-value>
   </context-param>
+  <context-param>
+        <param-name>primefaces.FONT_AWESOME</param-name>
+        <param-value>true</param-value>
+  </context-param>
 </web-app>
