mac-specific updates

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -31,4 +31,16 @@
         <param-name>primefaces.FONT_AWESOME</param-name>
         <param-value>true</param-value>
   </context-param>
+  <context-param>
+  		<param-name>upload.images</param-name>
+  		<param-value>/Users/kbuck/Documents/MastersProject/NECTrackerResources/images/</param-value>
+  </context-param>
+  <context-param>
+  		<param-name>upload.avatars</param-name>
+  		<param-value>/Users/kbuck/Documents/MastersProject/NECTrackerResources/avatars/</param-value>
+  </context-param>
+  <context-param>
+  		<param-name>upload.excel</param-name>
+  		<param-value>/Users/kbuck/Documents/MastersProject/NECTrackerResources/excel/</param-value>
+  </context-param>
 </web-app>
