--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,9 @@
   <artifactId>NECTrackerPro</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
   <build>
     <sourceDirectory>src</sourceDirectory>
     <resources>
@@ -33,6 +36,12 @@
     </plugins>
   </build>
   <dependencies>
+    <dependency>
+        <groupId>javax</groupId>
+        <artifactId>javaee-api</artifactId>
+        <version>7.0</version>
+        <scope>compile</scope>
+    </dependency>
   	<dependency>  
 	    <groupId>org.primefaces</groupId>  
 	    <artifactId>primefaces</artifactId>  
