--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -32,6 +32,10 @@
 	<servlet-name>Jersey Web Application</servlet-name>
 	<url-pattern>/rest/*</url-pattern>
   </servlet-mapping>
+  <error-page>
+    <exception-type>javax.faces.application.ViewExpiredException</exception-type>
+    <location>/WEB-INF/viewExpired.xhtml</location>
+  </error-page>
   <context-param>
 		<param-name>primefaces.THEME</param-name>
 		<param-value>home</param-value>
